--- a/src/app/admin/components/brands/brand-create/brand-create.component.html
+++ b/src/app/admin/components/brands/brand-create/brand-create.component.html
@@ -1,5 +1,5 @@
 <div class="brand-create-container">
-<mat-card>
+  <mat-card>
     <mat-card-title>Brand Create</mat-card-title>
     <mat-card-content>
       <form [formGroup]="brandForm" (ngSubmit)="onSubmit()">
@@ -8,6 +8,10 @@
           <input matInput formControlName="name" required>
           <mat-error *ngIf="brandForm.get('name').hasError('required')">Brand name is required</mat-error>
         </mat-form-field>
+        <button mat-raised-button color="primary" type="button" (click)="openFileUploadDialog()">
+          {{ selectedFile ? 'Change Image' : 'Upload Image' }}
+        </button>
+        <p *ngIf="selectedFile">Selected file: {{ selectedFile.name }}</p>
         <button mat-raised-button color="primary" type="submit">Create Brand</button>
       </form>
     </mat-card-content>
