--- a/src/app/admin/components/brands/brand-list/brand-list.component.html
+++ b/src/app/admin/components/brands/brand-list/brand-list.component.html
@@ -25,6 +25,15 @@
           <td mat-cell *matCellDef="let item; let i = index">{{ (currentPageNo - 1) * pageSize + i + 1 }}</td>
         </ng-container>
 
+        <ng-container matColumnDef="Image">
+          <th mat-header-cell *matHeaderCellDef class="header-cell">Resim</th>
+          <td mat-cell *matCellDef="let item">
+            <img [src]="item.brandImage?.url || 'assets/default-brand-image.png'" 
+                 alt="{{ item.name }}" 
+                 class="brand-image">
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="Brand">
           <th mat-header-cell *matHeaderCellDef class="header-cell">Marka Adı</th>
           <td mat-cell *matCellDef="let item">{{ item.name }}</td>
