--- a/src/app/admin/components/categories/category-list/category-list.component.html
+++ b/src/app/admin/components/categories/category-list/category-list.component.html
@@ -23,6 +23,15 @@
             <td mat-cell *matCellDef="let item; let i = index">{{ (currentPageNo - 1) * pageSize + i + 1 }}</td>
           </ng-container>
 
+          <ng-container matColumnDef="Image">
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Resim</th>
+            <td mat-cell *matCellDef="let item">
+              <img [src]="item.categoryImage?.url || 'assets/default-category-image.png'" 
+                   alt="{{ item.name }}" 
+                   class="category-image">
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="Category">
             <th mat-header-cell *matHeaderCellDef class="header-cell">Marka Adı</th>
             <td mat-cell *matCellDef="let item">{{ item.name }}</td>
