--- a/src/app/admin/components/categories/category-update/category-update.component.html
+++ b/src/app/admin/components/categories/category-update/category-update.component.html
@@ -15,6 +15,12 @@
           </mat-form-field>
         </div>
 
+        <div class="image-upload-container">
+          <img *ngIf="currentImageUrl && !selectedImageUrl" [src]="currentImageUrl" alt="Current Category Image" class="category-image">
+          <img *ngIf="selectedImageUrl" [src]="selectedImageUrl" alt="Selected Category Image" class="category-image">
+          <input type="file" (change)="onFileSelected($event)" accept="image/*">
+        </div>
+        
         <div class="form-row">
           <mat-form-field appearance="outline" class="full-width">
             <mat-label>Üst Kategori Seçimi</mat-label>
