--- a/src/app/ui/components/home/home.component.scss
+++ b/src/app/ui/components/home/home.component.scss
@@ -76,7 +76,7 @@ body {
 }
 
 .card:hover .img-box {
-  top: -40px;
+  top: -30px;
   scale: 0.75;
   box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
 }
@@ -109,16 +109,20 @@ body {
   }
 
 .card .content h2 {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 700;
   color: var(--clr);
+  
 }
 
 .card .content p {
   color: #333;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   margin: 4px 0;
   opacity: 0;
+  max-height: 45px;
+  min-height: 45px;
+  max-width: 180px;
 }
 
 .card .content a {
